--- a/src/main/resources/templates/productInfo.html
+++ b/src/main/resources/templates/productInfo.html
@@ -2,7 +2,7 @@
 <!--[if IE 7 ]><html class="ie ie7 lte9 lte8 lte7" lang="en-US"><![endif]-->
 <!--[if IE 8]><html class="ie ie8 lte9 lte8" lang="en-US">	<![endif]-->
 <!--[if IE 9]><html class="ie ie9 lte9" lang="en-US"><![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--><html class="noIE" lang="en-US"><!--<![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--><html class="noIE" lang="en-US" xmlns:th="http://www.thymeleaf.org"><!--<![endif]-->
 <head>
 	<meta charset="UTF-8" />
 	<title>GFashion - Responsive e-commerce HTML Template</title>
@@ -11,26 +11,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
 	<!-- Favorite Icons -->
-	<link rel="icon" href="img1/favicon/favicon.html" type="image/x-icon" />
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img1/favicon/apple-touch-icon-144x144-precomposed.html">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img1/favicon/apple-touch-icon-72x72-precomposed.html">
-	<link rel="apple-touch-icon-precomposed" href="img1/favicon/apple-touch-icon-precomposed.html">
+	<link rel="icon" th:href="@{/img1/favicon/favicon.html}" type="image/x-icon" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/i/mg1/favicon/apple-touch-icon-144x144-precomposed.html}">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/img1/favicon/apple-touch-icon-72x72-precomposed.html}">
+	<link rel="apple-touch-icon-precomposed" th:href="@{/img1/favicon/apple-touch-icon-precomposed.html}">
 	<!-- // Favorite Icons -->
 	
-	<link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
+	
 	
 	<!-- GENERAL CSS FILES -->
-	<link rel="stylesheet" href="css1/minified.css">
+	<link rel="stylesheet" th:href="@{/css1/minified.css}">
 
-	<script>window.jQuery || document.write('<script src="js1/jquery.min.js"><\/script>');</script>
-	<script src="js1/modernizr.min.js"></script>	
+
+	<script src="/js1/modernizr.min.js"></script>	
 	<!-- PARTICULAR PAGES CSS FILES -->
-	<link rel="stylesheet" href="css1/jquery.nouislider.css">
-	<link rel="stylesheet" href="css1/owl.carousel.css">
-	<link rel="stylesheet" href="css1/owl.theme.css">
-	<link rel="stylesheet" href="css1/innerpage.css">
+	<link rel="stylesheet" th:href="@{/css1/jquery.nouislider.css}">
+	<link rel="stylesheet" th:href="@{/css1/owl.carousel.css}">
+	<link rel="stylesheet" th:href="@{/css1/owl.theme.css}">
+	<link rel="stylesheet" th:href="@{/css1/innerpage.css}">
 	<!-- // PARTICULAR PAGES CSS FILES -->
-	<link rel="stylesheet" href="css1/responsive.css">
+	<link rel="stylesheet" th:href="@{/css1/responsive.css}">
 </head>
 <body class="product-single">
 	
@@ -153,7 +153,7 @@
 					<!-- SITE LOGO -->
 					<div class="logo-wrapper">
 						<a href="index-2.html" class="logo" title="GFashion - Responsive e-commerce HTML Template">
-							<img src="images/logo2.png" alt="Logo" />
+							<img th:src="@{/images/logo2.png}" alt="Logo" />
 						</a>
 					</div>
 					<!-- // SITE LOGO -->
@@ -201,13 +201,13 @@
 							
 							<div class="product-preview">
 								<div class="big-image">
-									<a href="images/yinghuayuan1.jpg" data-toggle="lightbox">
-										<img src="images/yinghuayuan1.jpg" alt="" />
+									<a href="" data-toggle="lightbox">
+										<img th:src="'/'+${list.ilist[0].url}" alt="" />
 									</a>
 								</div>
 								<ul class="thumbs unstyled clearfix">
-									<li><a href="images/yinghuayuan1.jpg"><img src="images/yinghuayuan1.jpg" alt=""/></a></li>
-									<li><a href="images/yinghuayuan2.jpg"><img src="images/yinghuayuan2.jpg" alt=""/></a></li>
+									<li th:if="${#lists.size(list.ilist)} > 1 "><a href=""><img th:src="'/'+${list.ilist[1].url}" alt=""/></a></li>
+									<li th:if="${#lists.size(list.ilist)} > 2 "><a href=""><img th:src="'/'+${list.ilist[2].url}" alt=""/></a></li>
 								</ul>
 							</div>
 							
@@ -218,23 +218,26 @@
 						<div class="col-xs-12 col-sm-8">
 							<section class="product-details add-cart">
 								<header class="entry-header">
-									<h2 class="entry-title uppercase">樱花园</h2>
+									<h2 class="entry-title uppercase" th:text="${list.pname}"></h2>
 								</header>
 								<article class="entry-content">
 									<figure>
-										<span class="entry-price inline-middle">￥120</span>
-										<div class="rate-bar inline-middle">
+										<span class="entry-price inline-middle" th:text="'￥'+${list.price}"></span>
+										<!-- <div class="rate-bar inline-middle">
 											<input type="range" value="4.5" step="0.5" id="backing0" />
 											<div class="rateit" data-rateit-backingfld="#backing0" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false"  data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-										</div>
+										</div> -->
 										
 										<div class="clearfix"></div>
 										
 										<figcaption class="m-b-sm">
 											<h5 class="subheader uppercase">介绍</h5>
-											<p>樱花园介绍</p>
+											<p th:text="${list.description}"></p>
 										</figcaption>
-										
+										<figcaption class="m-b-sm">
+											<h5 class="subheader uppercase">注意事项</h5>
+											<p th:text="${list.remark}"></p>	
+										</figcaption>
 										<div id="kehu_xinxi">
 											<div>
 												<span>团队/个人</span><br>
@@ -502,7 +505,7 @@
 									<div class="center-xs">
 										<div class="ads">
 											<a href="#">
-												<img src="images/demo/images-footer.jpg" alt="" />
+												<img th:src="@{/images/demo/images-footer.jpg}" alt="" />
 											</a>
 											<div class="ads-caption bottom-right">
 												<a href="#" class="btn btn-default btn-round">
@@ -566,9 +569,9 @@
 						<div class="pull-right">
 							<div class="vmid">
 								<span class="uppercase">付款接受&emsp;</span>
-								<a href="#"><img src="img1/visacard.png" alt="" width="40" /></a>
-								<a href="#"><img src="img1/mastercard.png" alt="" width="40" /></a>
-								<a href="#"><img src="img1/paypal.png" alt="" width="40" /></a>
+								<a href="#"><img th:src="@{/img1/visacard.png}" alt="" width="40" /></a>
+								<a href="#"><img th:src="@{/img1/mastercard.png}" alt="" width="40" /></a>
+								<a href="#"><img th:src="@{/img1/paypal.png}" alt="" width="40" /></a>
 							</div>
 						</div>
 					</div>
@@ -580,10 +583,10 @@
 	<!-- // SITE FOOTER -->
 
 <!-- Essential Javascripts -->
-<script src="js1/minified.js"></script>
+<script th:src="@{/js1/minified.js}"></script>
 <!-- // Essential Javascripts -->
-
-<script>
+ <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
+<!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -592,15 +595,16 @@
   ga('create', 'UA-27646173-3', 'themina.net');
   ga('send', 'pageview');
 
-</script>
+</script> -->
 	<!-- Particular Page Javascripts -->
-	<script src="js1/jquery.nouislider.js"></script>
-	<script src="js1/owl.carousel.js"></script>
-	<script src="js1/products.js"></script>
+	<script th:src="@{/js1/jquery.nouislider.js}"></script>
+	<script th:src="@{/js1/owl.carousel.js}"></script>
+	<script th:src="@{/js1/products.js}"></script>
+	
 	<!-- // Particular Page Javascripts -->
 	
 	<!-- Disqus -->
-	<script type="text/javascript">
+	<!-- <script type="text/javascript">
 	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 	var disqus_shortname = 'gfashion';		// required: replace example with your forum shortname
 
@@ -610,7 +614,7 @@
 		dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
 		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 	})();
-	</script>
+	</script> -->
 	<!-- // Disqus -->
 	
 	<script type="text/javascript">
