--- a/src/main/resources/templates/mode.html
+++ b/src/main/resources/templates/mode.html
@@ -53,7 +53,6 @@
 									<a class="dropdown-item" th:href="@{/xjb_areasController/query}" target="main">基地管理</a>
 									<a class="dropdown-item" href="Data-statistics.html" target="main">数据统计</a>
 									<a class="dropdown-item" href="project_tj.html" target="main">项目推荐</a>
-									<a class="dropdown-item" th:href="@{/menu/menuQuery}" target="main">套餐与活动推荐</a>
 								</div>
 							</li>
 							<li class="nav-item">
@@ -62,7 +61,7 @@
 								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="order.html" target="main">
+								<a class="nav-link" th:href="@{/order/query}" target="main">
 									<i class="fa fa-bars"></i> 订单管理
 								</a>
 							</li>
@@ -106,7 +105,7 @@
 									<a class="dropdown-item" href="salary.html" target="main">查看薪资</a>
 									<a class="dropdown-item" href="message.html" target="main">消息管理</a>
 									<a class="dropdown-item" href="access.html" target="main">权限管理</a>
-									<a class="dropdown-item" href="JJ_set meal.html" target="main">套餐管理</a>
+									<a class="dropdown-item" th:href="@{/menu/menuQuery}" target="main">套餐管理</a>
 
 								</div>
 							</li>
