--- a/src/main/resources/templates/menu1.html
+++ b/src/main/resources/templates/menu1.html
@@ -259,7 +259,7 @@
 					<span>实惠套餐</span>
 					<div class="order-top" th:each="bitem : ${blist}">
 						<li class="im-g">
-							<a th:href="@{/menu/toquerymenu1Bybid(id=${bitem.id})}"><img th:if="${bitem.image!=null}" th:src="${bitem.image.url}" width="273px" height="169px"/></a>
+							<a th:href="@{/menu/toquerymenu1Byid(id=${bitem.id},type='4')}"><img th:if="${bitem.image!=null}" th:src="${bitem.image.url}" width="273px" height="169px"/></a>
 						</li>
 						<li class="data">
 							<h3 th:text="${bitem.price}"></h3>
@@ -267,7 +267,7 @@
 							<p th:text="${bitem.name1}"></p>
 						</li>
 						<li class="bt-nn">
-							<a class="hvr-shutter-in-horizontal button" >加入</a>
+							<a href="javascript:void(0)" class="hvr-shutter-in-horizontal button" >加入</a>
 						</li>
 						<div class="clearfix"></div>
 					</div>
@@ -279,7 +279,7 @@
 					<span th:text="${item.tname}"></span>
 					<div class="order-top" th:each="items : ${item.list}">
 						<li class="im-g">
-							<a th:href="@{/menu/toquerymenu1Byid(id=${items.id})}"><img th:if="${items.images!=null}" th:src="${items.images.url}" width="273px" height="169px"/></a>
+							<a th:href="@{/menu/toquerymenu1Byid(id=${items.id},type='2')}"><img th:if="${items.images!=null}" th:src="${items.images.url}" width="273px" height="169px"/></a>
 						</li>
 						<li class="data">
 							<h3 th:text="${items.price}"></h3>
@@ -287,7 +287,7 @@
 							<p th:text="${items.name1}"></p>
 						</li>
 						<li class="bt-nn">
-							<a class="hvr-shutter-in-horizontal button" >加入</a>
+							<a href="javascript:void(0)" class="hvr-shutter-in-horizontal button" >加入</a>
 						</li>
 						<div class="clearfix"></div>
 					</div>
