--- a/src/main/resources/templates/menu1.html
+++ b/src/main/resources/templates/menu1.html
@@ -279,7 +279,7 @@
 					<span th:text="${item.tname}"></span>
 					<div class="order-top" th:each="items : ${item.list}">
 						<li class="im-g">
-							<a th:href="@{/menu/toquerymenu1Byid(id=${items.id},type='2')}"><img th:if="${items.images!=null}" th:src="${items.images.url}" width="273px" height="169px"/></a>
+							<a th:href="@{/menu/toquerymenu1Byid(id=${items.id},type='2')}"><img th:if="${items.image!=null}" th:src="${items.image.url}" width="273px" height="169px"/></a>
 						</li>
 						<li class="data">
 							<h3 th:text="${items.price}"></h3>
