--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -564,7 +564,7 @@
 														+"<th scope='col'>菜品总价</th>"
 														+"</thead>");
 													var divbody=$("<tbody></tbody>");
-													$.each(item1.list,function(item2,index2){
+													$.each(item2.list,function(item2,index2){
 														var tr=$("<tr>"
 														+"<th scope='row'><img src='img/product-image.jpg' width='50' height='50' alt='图片' /><b>{{item2.ix.mname}}</b></th>"
 														+"<td><b>{{item2.price}}</b></td>"
@@ -576,23 +576,36 @@
 													$(divtable).append(divbody);
 													$(divs).append(divtable);
 													div3=divs;
+													
 											}
 											if(item2.typeid==3){
 												var div=$("<div class='content col-md-11'></div>");
 												var table=$("<table class='table'><thead><th scope='col'>房间名称</th><th scope='col'>房间价格</th><th scope='col'>房间类型</th><th scope='col'>房间状态</th></thead></table>");
 												var tbody=$("<tbody></tbody>");
-												$.each(item1.list,function(item2,index){
-													var tr=$("<tr>"
-													+"<th scope='row'><img src='img/product-image.jpg' width='50' height='50' alt='图片' /><b>{{item2.ix.mname}}</b></th>"
-													+"<td><b>{{item2.price}}</b></td>"
-													+"<td><b>{{item2.name2}}</b></td>"
-													+"<td><b>￥{{item2.name2*item2.price}}</b></td>"
+												var type="单人间";
+												if(item2.ix.room.typeid==2){
+													type="双人间";
+												}
+												if(item2.ix.room.typeid==3){
+													type="总统套房";
+												}
+												var status;
+												if(item2.ix.room.status==1){
+													status="正在入住";
+												}else{
+													status="已退房";
+												}
+												var tr=$("<tr>"
+													+"<th scope='row'><img src='/"+item2.ix.room.img.url+"' width='50' height='50' alt='图片' /><b>"+item2.ix.room.rname+"</b></th>"
+													+"<td><b>"+item2.ix.room.price+"</b></td>"
+													+"<td><b>"+type+"</b></td>"
+													+"<td><b>"+status+"</b></td>"
 													+"</tr>");
 													$(tbody).append(tr);
-												})
 												$(table).append(tbody);
 												$(div).append(table);
 												div4=div;
+												price+=item2.ix.room.price;
 											}
 										})
 									})
