--- a/src/main/resources/templates/hotelOrder.html
+++ b/src/main/resources/templates/hotelOrder.html
@@ -104,6 +104,12 @@
 					    <div> 类型：<input type="text"readonly="readonly" class="lx" style="color: red;"></div>
 					    <div> 身份证号码：<input type="text" name="sfz" placeholder="请输入"></div>
 					     <input type="hidden" name="roomid" class="id">
+					     <div> 类型：
+					     	<select name="lx">
+					     		<option value="1">个人</option>
+					     		<option value="2">团队</option>
+					     	</select>
+					     </div>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
