--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -5,20 +5,20 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="Aviators - byaviators.com">
-		<link rel="stylesheet" href="css1/minified.css">
-		<link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
-		<link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css">
-		<link rel="stylesheet" href="assets/css/bootstrap-responsive.css" type="text/css">
-		<link rel="stylesheet" href="assets/libraries/chosen/chosen.css" type="text/css">
-		<link rel="stylesheet" href="assets/libraries/bootstrap-fileupload/bootstrap-fileupload.css" type="text/css">
-		<link rel="stylesheet" href="assets/libraries/jquery-ui-1.10.2.custom/css/ui-lightness/jquery-ui-1.10.2.custom.min.css" type="text/css">
-		<link rel="stylesheet" href="assets/css/realia-blue.css" type="text/css" id="color-variant-default">
+		<link rel="stylesheet" th:href="@{/css1/minified.css}">
+		<link rel="shortcut icon" th:href="@{/assets/img/favicon.png}" type="image/png">
+		<link rel="stylesheet" th:href="@{/assets/css/bootstrap.css}" type="text/css">
+		<link rel="stylesheet" th:href="@{/assets/css/bootstrap-responsive.css}" type="text/css">
+		<link rel="stylesheet" th:href="@{/assets/libraries/chosen/chosen.css}" type="text/css">
+		<link rel="stylesheet" th:href="@{/assets/libraries/bootstrap-fileupload/bootstrap-fileupload.css}" type="text/css">
+		<link rel="stylesheet" th:href="@{/assets/libraries/jquery-ui-1.10.2.custom/css/ui-lightness/jquery-ui-1.10.2.custom.min.css}" type="text/css">
+		<link rel="stylesheet" th:href="@{/assets/css/realia-blue.css}" type="text/css" id="color-variant-default">
 		<script>window.jQuery || document.write('<script src="js1/jquery.min.js"><\/script>');</script>
 		<script src="js1/modernizr.min.js"></script>	
-		<link rel="stylesheet" href="css1/owl.carousel.css">
-		<link rel="stylesheet" href="css1/owl.theme.css">
-		<link href="css1/flexslider.css" rel="stylesheet" />
-		<link rel="stylesheet" href="css1/responsive.css">
+		<link rel="stylesheet" th:href="@{/css1/owl.carousel.css}">
+		<link rel="stylesheet" th:href="@{/css1/owl.theme.css}">
+		<link th:href="@{/css1/flexslider.css}" rel="stylesheet" />
+		<link rel="stylesheet" th:href="@{/css1/responsive.css}">
 			<title>Realia | HTML Template</title>
 	</head>
 	<body>
@@ -141,7 +141,7 @@
 					<!-- SITE LOGO -->
 					<div class="logo-wrapper">
 						<a href="index-2.html" class="logo" title="GFashion - Responsive e-commerce HTML Template">
-							<img src="images/logo2.png" alt="Logo" />
+							<img th:src="@{/images/logo2.png}" alt="Logo" />
 						</a>
 					</div>
 					<!-- // SITE LOGO -->
@@ -241,7 +241,7 @@
 													<div class="image">
 														<div class="content">
 															<a href="detail.html"></a>
-															<img src="assets/img/tmp/property-small-1.png" alt="">
+															<img th:src="@{/assets/img/tmp/property-small-1.png}" alt="">
 														</div>
 														<!-- /.content -->
 
@@ -281,7 +281,7 @@
 													<div class="image">
 														<div class="content">
 															<a href="detail.html"></a>
-															<img src="assets/img/tmp/property-small-2.png" alt="">
+															<img th:src="@{/assets/img/tmp/property-small-2.png}" alt="">
 														</div>
 														<!-- /.content -->
 														<div class="price">1 250 000€</div>
@@ -320,86 +320,7 @@
 													<div class="image">
 														<div class="content">
 															<a href="detail.html"></a>
-															<img src="assets/img/tmp/property-small-3.png" alt="">
-														</div>
-														<!-- /.content -->
-
-														<div class="price">1 250 000€</div>
-														<!-- /.price -->
-														<div class="reduced">Reduced </div>
-														<!-- /.reduced -->
-													</div>
-													<!-- /.image -->
-
-													<div class="title">
-														<h2><a href="detail.html">27523 Pacific Coast</a></h2>
-													</div>
-													<!-- /.title -->
-
-													<div class="location">Palo Alto CA</div>
-													<!-- /.location -->
-													<div class="area">
-														<span class="key">Area:</span>
-														<!-- /.key -->
-														<span class="value">120</span>
-														<!-- /.value -->
-													</div>
-													<!-- /.area -->
-													<div class="bedrooms">
-														<div class="content">4</div>
-													</div>
-													<!-- /.bedrooms -->
-													<div class="bathrooms">
-														<div class="content">3</div>
-													</div>
-													<!-- /.bathrooms -->
-												</div>
-												<!-- /.property -->
-
-												<div class="property span3">
-													<div class="image">
-														<div class="content">
-															<a href="detail.html"></a>
-															<img src="assets/img/tmp/property-small-4.png" alt="">
-														</div>
-														<!-- /.content -->
-														<div class="price">1 250 000€</div>
-														<!-- /.price -->
-														<div class="reduced">Reduced </div>
-														<!-- /.reduced -->
-													</div>
-													<!-- /.image -->
-
-													<div class="title">
-														<h2><a href="detail.html">27523 Pacific Coast</a></h2>
-													</div>
-													<!-- /.title -->
-
-													<div class="location">Palo Alto CA</div>
-													<!-- /.location -->
-													<div class="area">
-														<span class="key">Area:</span>
-														<!-- /.key -->
-														<span class="value">120</span>
-														<!-- /.value -->
-													</div>
-													<!-- /.area -->
-													<div class="bedrooms">
-														<div class="content">4</div>
-													</div>
-													<!-- /.bedrooms -->
-													<div class="bathrooms">
-														<div class="content">3</div>
-													</div>
-													<!-- /.bathrooms -->
-												</div>
-												<!-- /.property -->
-
-												<div class="property span3">
-													<div class="image">
-														<div class="content">
-															<a href="detail.html"></a>
-															<img src="assets/img/tmp/property-small-5.png" alt="">
+															<img th:src="@{/assets/img/tmp/property-small-3.png}" alt="">
 														</div>
 														<!-- /.content -->
 
@@ -439,7 +360,86 @@
 													<div class="image">
 														<div class="content">
 															<a href="detail.html"></a>
-															<img src="assets/img/tmp/property-small-6.png" alt="">
+															<img th:src="@{/assets/img/tmp/property-small-4.png}" alt="">
+														</div>
+														<!-- /.content -->
+														<div class="price">1 250 000€</div>
+														<!-- /.price -->
+														<div class="reduced">Reduced </div>
+														<!-- /.reduced -->
+													</div>
+													<!-- /.image -->
+
+													<div class="title">
+														<h2><a href="detail.html">27523 Pacific Coast</a></h2>
+													</div>
+													<!-- /.title -->
+
+													<div class="location">Palo Alto CA</div>
+													<!-- /.location -->
+													<div class="area">
+														<span class="key">Area:</span>
+														<!-- /.key -->
+														<span class="value">120</span>
+														<!-- /.value -->
+													</div>
+													<!-- /.area -->
+													<div class="bedrooms">
+														<div class="content">4</div>
+													</div>
+													<!-- /.bedrooms -->
+													<div class="bathrooms">
+														<div class="content">3</div>
+													</div>
+													<!-- /.bathrooms -->
+												</div>
+												<!-- /.property -->
+
+												<div class="property span3">
+													<div class="image">
+														<div class="content">
+															<a href="detail.html"></a>
+															<img th:src="@{/assets/img/tmp/property-small-1.png}" alt="">
+														</div>
+														<!-- /.content -->
+
+														<div class="price">1 250 000€</div>
+														<!-- /.price -->
+														<div class="reduced">Reduced </div>
+														<!-- /.reduced -->
+													</div>
+													<!-- /.image -->
+
+													<div class="title">
+														<h2><a href="detail.html">27523 Pacific Coast</a></h2>
+													</div>
+													<!-- /.title -->
+
+													<div class="location">Palo Alto CA</div>
+													<!-- /.location -->
+													<div class="area">
+														<span class="key">Area:</span>
+														<!-- /.key -->
+														<span class="value">120</span>
+														<!-- /.value -->
+													</div>
+													<!-- /.area -->
+													<div class="bedrooms">
+														<div class="content">4</div>
+													</div>
+													<!-- /.bedrooms -->
+													<div class="bathrooms">
+														<div class="content">3</div>
+													</div>
+													<!-- /.bathrooms -->
+												</div>
+												<!-- /.property -->
+
+												<div class="property span3">
+													<div class="image">
+														<div class="content">
+															<a href="detail.html"></a>
+															<img th:src="@{/assets/img/tmp/property-small-1.png}" alt="">
 														</div>
 														<!-- /.content -->
 
@@ -956,17 +956,17 @@
 								</div>
 							</div>
 						</div>
-						<script type="text/javascript" src="assets/js/jquery.js"></script>
-						<script type="text/javascript" src="assets/js/jquery.ezmark.js"></script>
-						<script type="text/javascript" src="assets/js/jquery.currency.js"></script>
-						<script type="text/javascript" src="assets/js/jquery.cookie.js"></script>
-						<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-						<script type="text/javascript" src="assets/js/carousel.js"></script>
-						<script type="text/javascript" src="assets/libraries/jquery-ui-1.10.2.custom/js/jquery-ui-1.10.2.custom.min.js"></script>
-						<script type="text/javascript" src="assets/libraries/chosen/chosen.jquery.min.js"></script>
-						<script type="text/javascript" src="assets/libraries/iosslider/_src/jquery.iosslider.min.js"></script>
-						<script type="text/javascript" src="assets/libraries/bootstrap-fileupload/bootstrap-fileupload.js"></script>
-						<script type="text/javascript" src="assets/js/realia.js"></script>
+						<script type="text/javascript" th:src="@{/assets/js/jquery.js}"></script>
+						<script type="text/javascript" th:src="@{/assets/js/jquery.ezmark.js}"></script>
+						<script type="text/javascript" th:src="@{/assets/js/jquery.currency.js}"></script>
+						<script type="text/javascript" th:src="@{/assets/js/jquery.cookie.js}"></script>
+						<script type="text/javascript" th:src="@{/assets/js/bootstrap.min.js}"></script>
+						<script type="text/javascript" th:src="@{/assets/js/carousel.js}"></script>
+						<script type="text/javascript" th:src="@{/assets/libraries/jquery-ui-1.10.2.custom/js/jquery-ui-1.10.2.custom.min.js}"></script>
+						<script type="text/javascript" th:src="@{/assets/libraries/chosen/chosen.jquery.min.js}"></script>
+						<script type="text/javascript" th:src="@{/assets/libraries/iosslider/_src/jquery.iosslider.min.js}"></script>
+						<script type="text/javascript" th:src="@{/assets/libraries/bootstrap-fileupload/bootstrap-fileupload.js}"></script>
+						<script type="text/javascript" th:src="@{/assets/js/realia.js}"></script>
 					</div>
 				</div>
 			</div>
