--- a/src/main/resources/templates/menu1.html
+++ b/src/main/resources/templates/menu1.html
@@ -267,7 +267,9 @@
 							<p th:text="${bitem.name1}"></p>
 						</li>
 						<li class="bt-nn">
-							<a href="javascript:void(0)" class="hvr-shutter-in-horizontal button" >加入</a>
+							<a href="javascript:void(0)" class="jr hvr-shutter-in-horizontal button" >加入</a>
+							<span style="display: none;">4</span>
+							<span style="display: none;" th:text="${bitem.id}"></span>
 						</li>
 						<div class="clearfix"></div>
 					</div>
@@ -287,7 +289,9 @@
 							<p th:text="${items.name1}"></p>
 						</li>
 						<li class="bt-nn">
-							<a href="javascript:void(0)" class="hvr-shutter-in-horizontal button" >加入</a>
+							<a href="javascript:void(0)" class="jr hvr-shutter-in-horizontal button" >加入</a>
+							<span style="display: none;">2</span>
+							<span style="display: none;" th:text="${items.id}"></span>
 						</li>
 						<div class="clearfix"></div>
 					</div>
@@ -309,6 +313,26 @@
 				$().UItoTop({
 					easingType: 'easeOutQuart'
 				});
+				
+				$(".jr").click(function(){
+					var id=$(this).next().next().text();
+					var typeid=$(this).next().text();
+					var name1=1;
+					$.ajax({
+						url:"/menu/shopcartadd",
+						data:{
+							"iid":id,
+							"typeid":typeid,
+							"name1":name1
+							},
+						type:"post",
+						dataType:"text",
+						success:function(result){
+							alert(result);
+						}
+					})
+				})
+				
 			});
 		</script>
 		<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
